# small-rust

./: .dockerignore  .gitignore  Makefile
core/: Cargo.toml
core/src/: emojis.rs  hostname.rs  lib.rs
http/: Cargo.toml  Dockerfile
http/src/: lib.rs  main.rs
