[package]
name = "small-rust"
version = "0.1.0"
edition = "2021"

# to reduce the size see:
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
small-rust-core = { path = "../core" }
